<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SubirImagen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="url">URL:</string>
    <string name="guardar">Guardar como:</string>
    <string name="guardaren">Guardar en:</string>
    <string name="extPrivada">Externa Privada</string>
    <string name="extPublica">Externa Pública</string>
    <string name="btDescargar">Descargar</string>
    <string name="urlVacia">Hay algun campo vacio</string>
    <string name="formato">Formato de archivo no permitido</string>
    <string name="cargando">Bajando Imagen</string>
    <string name="errorUrl">Url de la foto no encontrada</string>
    <string name="imgGuardada">Imagen guardada</string>

</resources>
